--- a/fundomar.ipynb
+++ b/fundomar.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "glfw.init()\n",
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE);\n",
-    "window = glfw.create_window(800, 800, \"Fundo do mar\", None, None)\n",
+    "window = glfw.create_window(1920, 1080, \"Fundo do mar\", None, None)\n",
     "glfw.make_context_current(window)"
    ]
   },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,62 +288,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices_estrela_do_mar = []\n",
+    "vertices_estrela = []\n",
     "\n",
-    "vertices_estrela_do_mar = [\n",
-    "    # Centro da estrela do mar\n",
-    "    [0.0, 0.0],\n",
-    "    \n",
-    "    # Braço 1\n",
-    "    [0.0, 0.0], [0.2, 0.8], [0.0, 0.6], [-0.2, 0.8],\n",
-    "    \n",
-    "    # Braço 2\n",
-    "    [0.0, 0.0], [-0.2, 0.8], [-0.4, 0.6], [-0.2, 0.2],\n",
-    "    \n",
-    "    # Braço 3\n",
-    "    [0.0, 0.0], [-0.2, 0.2], [-0.2, -0.2], [0.0, -0.4],\n",
-    "    \n",
-    "    # Braço 4\n",
-    "    [0.0, 0.0], [0.0, -0.4], [0.2, -0.2], [0.2, 0.2],\n",
-    "    \n",
-    "    # Braço 5\n",
-    "    [0.0, 0.0], [0.2, 0.2], [0.4, 0.6], [0.2, 0.8],\n",
+    "vertices_estrela = [\n",
+    "    [-0.63, 0.13],[0.22, -0.7],[0.03, 0.13],\n",
+    "    [-0.42, -0.7],[0.42, 0.13],[-0.22, 0.13],\n",
+    "    [-0.31, -0.18],[0.10, -0.18],[-0.10, 0.63]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices_tubarao = []\n",
+    "# Número de vértices para o corpo do peixe\n",
+    "num_vertices_circulo = 32\n",
+    "raio = 0.4\n",
     "\n",
-    "vertices_tubarao = [\n",
-    "    # Corpo do tubarão\n",
-    "    [-0.6, -0.2], [-0.4, 0.0], [-0.5, 0.2],  # Triângulo 1 (corpo superior)\n",
-    "    [-0.6, -0.2], [-0.5, 0.2], [-0.3, -0.1], # Triângulo 2 (corpo inferior)\n",
-    "    \n",
-    "    # Nadadeira dorsal\n",
-    "    [-0.4, 0.0], [-0.2, 0.3], [-0.1, 0.0],   # Triângulo 3 (nadadeira dorsal)\n",
-    "    \n",
-    "    # Cauda\n",
-    "    [-0.7, -0.2], [-0.8, -0.1], [-0.75, -0.3], # Triângulo 4 (cauda superior)\n",
-    "    [-0.7, -0.2], [-0.75, -0.3], [-0.8, -0.4], # Triângulo 5 (cauda inferior)\n",
-    "    \n",
-    "    # Nadadeiras laterais\n",
-    "    [-0.4, -0.15], [-0.2, -0.3], [0.0, -0.15], # Triângulo 6 (nadadeira esquerda)\n",
-    "    [-0.4, -0.15], [-0.2, -0.3], [-0.5, -0.35],# Triângulo 7 (nadadeira direita)\n",
-    "]"
+    "vertices_corpo = []\n",
+    "\n",
+    "for i in range(num_vertices_circulo):\n",
+    "    angulo = 2 * math.pi * i / num_vertices_circulo\n",
+    "    x = math.cos(angulo) * raio\n",
+    "    y = math.sin(angulo) * raio\n",
+    "    vertices_corpo.append([x, y])\n",
+    "\n",
+    "vertices_cauda = [\n",
+    "    [+0.05,  0.0],  # Vértice 1 (ponta da cauda)\n",
+    "    [-0.4,  0.3],  # Vértice 2 (parte superior da cauda)\n",
+    "    [-0.4, -0.3],  # Vértice 3 (parte inferior da cauda)\n",
+    "]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,30 +345,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices_sol = []\n",
-    "\n",
-    "num_vertices = 64  # pontos para formar o círculo\n",
-    "pi = 3.14\n",
+    "num_vertices = 50  # pontos para formar o círculo\n",
+    "num_spikes = num_vertices  # número de espinhos\n",
     "raio = 0.1\n",
+    "comprimento_espinhos = 0.2\n",
     "angulo = 0.0\n",
     "\n",
-    "for i in range(num_vertices):\n",
-    "    angulo += 2 * pi / num_vertices  # pega angulo do próximo ponto\n",
+    "# Listas de vértices\n",
+    "vertices_sol = []\n",
+    "vertices_espinhos = []\n",
     "\n",
-    "    # constrói círculo inteiro\n",
+    "# Gera os vértices do círculo\n",
+    "for i in range(num_vertices):\n",
+    "    angulo += 2 * math.pi / num_vertices\n",
     "    x = math.cos(angulo) * raio\n",
     "    y = math.sin(angulo) * raio\n",
     "    vertices_sol.append([x, y])\n",
+    "\n",
+    "    # Adiciona vértices dos espinhos\n",
+    "    x_espinho = math.cos(angulo) * (raio + comprimento_espinhos)\n",
+    "    y_espinho = math.sin(angulo) * (raio + comprimento_espinhos)\n",
+    "    vertices_espinhos.append([x, y])\n",
+    "    vertices_espinhos.append([x_espinho, y_espinho])\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,16 +385,18 @@
     "\n",
     "\n",
     "obj_vert.append(vertice_ceu)\n",
-    "obj_vert.append(vertices_sol)\n",
-    "obj_vert.append(vertices_estrela_do_mar)\n",
-    "obj_vert.append(vertices_tubarao)\n",
+    "obj_vert.append(vertices_espinhos)\n",
+    "obj_vert.append(vertices_corpo)\n",
+    "obj_vert.append(vertices_cauda)\n",
+    "obj_vert.append(vertices_estrela)\n",
+    "\n",
     "\n",
     "obj_vert = np.concatenate(obj_vert)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,10 +531,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def draw_element(vertices, color, transform):\n",
     "    glUniform4f(loc_color, *color)\n",
@@ -547,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,29 +563,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### O código dessa célula não está sendo usado.\n",
-    "triangulos = False\n",
+    "\n",
     "def key_event(window,key,scancode,action,mods):\n",
-    "    global vel_x, vel_y, angulo, tam, flag, polygon_mode, triangulos\n",
+    "    global vel_x, vel_y, angulo, tam, flag, polygon_mode\n",
     "    max_velo = 0.0003\n",
     "\n",
-    "    if key == 84:\n",
-    "        triangulos = not triangulos\n",
+    "    \n",
     "    \n",
     "    if key == 265 and vel_y < max_velo : vel_y += 0.00001 #cima\n",
     "    if key == 264 and vel_y > -max_velo : vel_y -= 0.00001 #baixo\n",
     "    if key == 263 and vel_x > -max_velo: vel_x -= 0.00001 #esquerda\n",
     "    if key == 262 and vel_x < max_velo: vel_x += 0.00001 #direita\n",
     "\n",
-    "    if key == 65: angulo += 0.01 #a \n",
-    "    if key == 83: angulo -= 0.01  #s\n",
+    "    if key == 65: angulo += 0.01 \n",
+    "    if key == 83: angulo -= 0.01 \n",
     "\n",
-    "    if key == 90: tam += 0.01 # x\n",
-    "    if key == 88: tam -= 0.01 # z\n",
+    "    if key == 90: tam += 0.01 \n",
+    "    if key == 88: tam -= 0.01\n",
     "\n",
     "    if key == 80 and action == glfw.PRESS:\n",
     "        if polygon_mode == GL_FILL:\n",
@@ -615,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,25 +676,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def background():\n",
+    "    glClearColor(0.0, 0.2, 0.5, 1.0)\n",
+    "    glClear(GL_COLOR_BUFFER_BIT) \n",
+    "    \n",
+    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) #ceu\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, translacao(1.0, 1.0, 0))\n",
+    "    glDrawArrays(GL_TRIANGLE_STRIP, 0, len(vertice_ceu))\n",
+    "\n",
+    "    glUniform4f(loc_color, 0.94, 0.9, 0.55, 1.0) #areia\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, translacao(1.0, -1.4, 0))\n",
+    "    glDrawArrays(GL_TRIANGLE_STRIP, 0, len(vertice_ceu))\n",
+    "\n",
+    "\n",
+    "    glUniform4f(loc_color, 1.0, 1.0, 0.0, 1.0) #sol\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, translacao(0.9, 0.9, 0))\n",
+    "    glDrawArrays(GL_POLYGON, len(vertice_ceu), len(vertices_espinhos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def peixe():\n",
+    "    global inicio\n",
+    "    peixe_x = 0.3\n",
+    "    peixe_y = -0.5\n",
+    "\n",
+    "\n",
+    "    glUniform4f(loc_color, 1.0, 0.5, 0.31, 1.0) #peixe-corpo\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(peixe_x, peixe_y, 0),escala(0.3,0.3,0)))\n",
+    "    glDrawArrays(GL_POLYGON, inicio, len(vertices_corpo))\n",
+    "\n",
+    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) #peixe-olho\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(peixe_x + 0.07, peixe_y + 0.06, 0),escala(0.04,0.04,0)))\n",
+    "    glDrawArrays(GL_POLYGON, inicio, len(vertices_corpo))\n",
+    "\n",
+    "    glUniform4f(loc_color, 0.0, 0.0, 0.0, 1.0) #peixe-olho-parte-preta\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(peixe_x + 0.07, peixe_y + 0.06, 0),escala(0.03,0.03,0)))\n",
+    "    glDrawArrays(GL_POLYGON, inicio, len(vertices_corpo))\n",
+    "\n",
+    "    inicio += len(vertices_corpo)\n",
+    "\n",
+    "    glUniform4f(loc_color, 1.0, 0.5, 0.31, 1.0) #peixe-cauda\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(peixe_x - 0.05, peixe_y, 0),escala(0.3,0.3,0)))\n",
+    "    glDrawArrays(GL_POLYGON, inicio, len(vertices_cauda))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[mouse event] button= 0\n",
-      "[mouse event] action= 1\n",
-      "[mouse event] mods= 0\n",
-      "-------\n",
-      "cliquei no botao mouse esquerdo...\n",
-      "[mouse event] button= 0\n",
-      "[mouse event] action= 0\n",
-      "[mouse event] mods= 0\n",
-      "-------\n",
-      "cliquei no botao mouse esquerdo...\n"
+     "ename": "TypeError",
+     "evalue": "peixe() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[65], line 28\u001b[0m\n\u001b[1;32m     24\u001b[0m peixe_x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.3\u001b[39m\n\u001b[1;32m     25\u001b[0m peixe_y \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m\n\u001b[0;32m---> 28\u001b[0m peixe(inicio)\n\u001b[1;32m     30\u001b[0m inicio \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(vertices_cauda)\n\u001b[1;32m     32\u001b[0m glUniform4f(loc_color, \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m0.84\u001b[39m, \u001b[38;5;241m0.0\u001b[39m, \u001b[38;5;241m1.0\u001b[39m) \u001b[38;5;66;03m#estrela-do-mar-braco-1\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: peixe() takes 0 positional arguments but 1 was given"
      ]
     }
    ],
@@ -724,26 +768,25 @@
     "    glfw.poll_events() \n",
     "\n",
     "    \n",
-    "    glClearColor(0.0, 0.2, 0.5, 1.0)\n",
-    "    glClear(GL_COLOR_BUFFER_BIT) \n",
+    "    background()\n",
+    "\n",
+    "    inicio = len(vertice_ceu) + len(vertices_espinhos)\n",
+    "\n",
+    "    peixe_x = 0.3\n",
+    "    peixe_y = -0.5\n",
+    "\n",
+    "\n",
+    "    peixe(inicio)\n",
+    "\n",
+    "    inicio += len(vertices_cauda)\n",
+    "\n",
+    "    glUniform4f(loc_color, 1.0, 0.84, 0.0, 1.0) #estrela-do-mar-braco-1\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(-0.5,-0.7, 0),escala(0.3,0.3,0)))\n",
+    "    glDrawArrays(GL_TRIANGLES, inicio, len(vertices_estrela))\n",
+    "\n",
     "    \n",
-    "    glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) #ceu\n",
-    "    glUniformMatrix4fv(loc_transform, 1,GL_TRUE, translacao(1.0, 1.0, 0))\n",
-    "    glDrawArrays(GL_TRIANGLE_STRIP, 0, len(vertice_ceu))\n",
     "\n",
-    "\n",
-    "    glUniform4f(loc_color, 1.0, 1.0, 0.0, 1.0)\n",
-    "    glUniformMatrix4fv(loc_transform, 1,GL_TRUE, translacao(1.0, 1.0, 0))\n",
-    "    glDrawArrays(GL_TRIANGLE_FAN, len(vertice_ceu), len(vertices_sol))\n",
     "    \n",
-    "    \n",
-    "    #glUniform4f(loc_color, 1.0, 1.0, 1.0, 1.0) ### modificando a cor do objeto!\n",
-    "\n",
-    "    if triangulos:\n",
-    "        glPolygonMode(GL_FRONT_AND_BACK,GL_LINE)\n",
-    "\n",
-    "    else: \n",
-    "        glPolygonMode(GL_FRONT_AND_BACK, polygon_mode)\n",
     "    glfw.swap_buffers(window)\n",
     "\n",
     "glfw.terminate()"
