--- a/fundomar.ipynb
+++ b/fundomar.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,23 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "vertice_ceu = []\n",
     "\n",
     "vertice_ceu = [\n",
-    "    [+2.0, -0.5],\n",
+    "    [+2.0, -0.7],\n",
     "    [+2.0, +0.5],\n",
-    "    [-2.0, -0.5],\n",
+    "    [-2.0, -0.7],\n",
     "    [-2.0, +0.5],\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,13 +578,12 @@
     "    if key == 263 and vel_x > -max_velo: vel_x -= 0.00001 #esquerda\n",
     "    if key == 262 and vel_x < max_velo: vel_x += 0.00001 #direita\n",
     "\n",
-    "    if key == 65: angulo += 0.01 # A\n",
+    "    if key == 65: angulo += 0.01 \n",
     "    if key == 83: angulo -= 0.01 \n",
     "\n",
-    "    if key == 90: tam += 0.01 # Z\n",
-    "    if key == 88: tam -= 0.01 #X\n",
+    "    if key == 90: tam += 0.01 \n",
+    "    if key == 88: tam -= 0.01\n",
     "\n",
-    "    # clicar na tecla P\n",
     "    if key == 80 and action == glfw.PRESS:\n",
     "        if polygon_mode == GL_FILL:\n",
     "            polygon_mode = GL_LINE  # Modo wireframe\n",
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,33 +729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 132,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\Lib\\site-packages\\glfw\\__init__.py:914: GLFWError: (65537) b'The GLFW library is not initialized'\n",
-      "  warnings.warn(message, GLFWError)\n"
-     ]
-    },
-    {
-     "ename": "GLError",
-     "evalue": "GLError(\n\terr = 1282,\n\tdescription = b'opera\\xe7\\xe3o inv\\xe1lida',\n\tbaseOperation = glClearColor,\n\tcArguments = (0.0, 0.2, 0.5, 1.0)\n)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mGLError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 21\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m glfw\u001b[38;5;241m.\u001b[39mwindow_should_close(window):\n\u001b[0;32m     18\u001b[0m     glfw\u001b[38;5;241m.\u001b[39mpoll_events() \n\u001b[1;32m---> 21\u001b[0m     background()\n\u001b[0;32m     23\u001b[0m     inicio \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(vertice_ceu) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mlen\u001b[39m(vertices_espinhos)\n\u001b[0;32m     25\u001b[0m     peixe_x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.3\u001b[39m\n",
-      "Cell \u001b[1;32mIn[31], line 2\u001b[0m, in \u001b[0;36mbackground\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbackground\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     glClearColor(\u001b[38;5;241m0.0\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m1.0\u001b[39m)\n\u001b[0;32m      3\u001b[0m     glClear(GL_COLOR_BUFFER_BIT) \n\u001b[0;32m      5\u001b[0m     glUniform4f(loc_color, \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m1.0\u001b[39m) \u001b[38;5;66;03m#ceu\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\OpenGL\\error.py:230\u001b[0m, in \u001b[0;36m_ErrorChecker.glCheckError\u001b[1;34m(self, result, baseOperation, cArguments, *args)\u001b[0m\n\u001b[0;32m    228\u001b[0m err \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_currentChecker()\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m err \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_noErrorResult:\n\u001b[1;32m--> 230\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_errorClass(\n\u001b[0;32m    231\u001b[0m         err,\n\u001b[0;32m    232\u001b[0m         result,\n\u001b[0;32m    233\u001b[0m         cArguments \u001b[38;5;241m=\u001b[39m cArguments,\n\u001b[0;32m    234\u001b[0m         baseOperation \u001b[38;5;241m=\u001b[39m baseOperation,\n\u001b[0;32m    235\u001b[0m     )\n\u001b[0;32m    236\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mGLError\u001b[0m: GLError(\n\terr = 1282,\n\tdescription = b'opera\\xe7\\xe3o inv\\xe1lida',\n\tbaseOperation = glClearColor,\n\tcArguments = (0.0, 0.2, 0.5, 1.0)\n)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -781,20 +758,15 @@
     "\n",
     "    inicio = len(vertice_ceu) + len(vertices_espinhos)\n",
     "\n",
-    "    peixe_x = 0.3\n",
-    "    peixe_y = -0.5\n",
-    "\n",
-    "\n",
     "    peixe()\n",
     "\n",
     "    inicio += len(vertices_cauda)\n",
     "\n",
-    "    glUniform4f(loc_color, 1.0, 0.84, 0.0, 1.0) #estrela-do-mar-braco-1\n",
+    "    glUniform4f(loc_color, 1.0, 0.84, 0.0, 1.0) #estrela-do-mar\n",
     "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(-0.5,-0.7, 0),escala(0.3,0.3,0)))\n",
     "    glDrawArrays(GL_TRIANGLES, inicio, len(vertices_estrela))\n",
-    "    \n",
-    "    glPolygonMode(GL_FRONT_AND_BACK, polygon_mode)\n",
     "\n",
+    "    \n",
     "\n",
     "    \n",
     "    glfw.swap_buffers(window)\n",
@@ -869,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
