--- a/fundomar.ipynb
+++ b/fundomar.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 420,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertices_barco = []\n",
+    "\n",
+    "vertices_barco = [\n",
+    "    \n",
+    "    [-0.96, 0.0],[-0.67, -0.83],\n",
+    "    [-0.01, -0.14],[-0.01, -0.14],\n",
+    "    [0.65, -0.83],[-0.67, -0.83],\n",
+    "    [-0.01, -0.14],[0.94, 0.00],\n",
+    "    [0.65, -0.83],[-0.46, -0.09],\n",
+    "    [-0.01, 0.71],[-0.01, -0.14],\n",
+    "    [-0.01, 0.71],[0.41, -0.09],\n",
+    "    [-0.01, -0.14],\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,6 +410,7 @@
     "obj_vert.append(vertices_corpo)\n",
     "obj_vert.append(vertices_cauda)\n",
     "obj_vert.append(vertices_estrela)\n",
+    "obj_vert.append(vertices_barco)\n",
     "\n",
     "\n",
     "obj_vert = np.concatenate(obj_vert)"
@@ -396,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,18 +553,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "def draw_element(vertices, color, transform):\n",
-    "    glUniform4f(loc_color, *color)\n",
-    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, transform)\n",
-    "    glDrawArrays(GL_TRIANGLE_STRIP, offset, len(vertices))"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -766,6 +778,12 @@
     "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(-0.5,-0.7, 0),escala(0.3,0.3,0)))\n",
     "    glDrawArrays(GL_TRIANGLES, inicio, len(vertices_estrela))\n",
     "\n",
+    "    inicio += len(vertices_estrela)\n",
+    "\n",
+    "    \n",
+    "    glUniform4f(loc_color, 0.75, 0.75, 0.75, 1.0) #estrela-do-mar\n",
+    "    glUniformMatrix4fv(loc_transform, 1, GL_TRUE, multiplica_matriz(translacao(-0.3,0.53, 0),escala(0.3,0.3,0)))\n",
+    "    glDrawArrays(GL_TRIANGLES, inicio, len(vertices_barco))\n",
     "    \n",
     "\n",
     "    \n",
